# neilkaushikkar.com

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  content.json  docker-entrypoint.sh  host.json  proxies.json
.github/workflows/: build-and-push.yml  build-push-restart.yml  build-push.yml  restart.yml
archive/v1/: content.json
archive/v1/templates/: index.hbs
archive/v1/templates/sections/: affiliations.hbs  skills.hbs  timeline.hbs
azure-scripts/: deploy.sh  local-start.sh  login-details.txt
functions/: functions.txt
functions/index/: function.json
functions/resume/: function.json
functions/static/: function.json
scripts/: deploy.sh  local-start.sh
src/: content.rs  filters.rs  handlers.rs  helpers.rs  lib.rs  main.rs
src/secrets/: loaders.rs  mod.rs  models.rs  utils.rs
template_generator/: Cargo.toml
template_generator/src/: content.rs  main.rs
templates/: 404.hbs  base.hbs  index.hbs  index.html
templates/modals/: al22.hbs  burd.hbs  cf-ea-revamp.hbs  cs128h.hbs  kqueue.hbs  luis.hbs  template.hbs  twilio.hbs
templates/modals/base/: image-modal-base.hbs  text-modal-base.hbs
templates/modals/content/: al22.hbs  burd.hbs  cf-ea-revamp.hbs  cs128h.hbs  kqueue.hbs  luis.hbs  twilio.hbs
templates/sections/: portfolio.hbs  timeline.hbs
webserver/: Cargo.toml
webserver/src/: handlers.rs  main.rs
www/static/css/: style.css
