[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
warp = { version = "0.3", features = ["tls", "compression"] }
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
futures = "0.3.24"
reqwest = "0.11"
log = "0.4.14"